--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -202,9 +202,7 @@ nav {
 
 .search-input {
     align-items: center;
-    /*background: #fff;*/
-    /*border: 1px solid #9ba7af;*/
-    background: #efefef;
+    background: #ebebeb;
     border: none;
     border-radius: 4px;
     color: #555;
@@ -217,14 +215,13 @@ nav {
 }
 
 .search-input:focus {
-    /*border: 1px solid #00B8D4;*/
     border-radius: 0;
     height: 34px;
     width: 228px;
 }
 
 .search-input::placeholder {
-    color: #b0b0b0;
+    color: #aaa;
 }
 
 .brand {
@@ -1340,7 +1337,9 @@ progress::-webkit-progress-value {
 .langs {
     display: flex;
     flex-flow: row;
+    justify-content: space-between;
     margin-top: 16px;
+    width: 135px;
 }
 
 .lang {
@@ -1351,10 +1350,6 @@ progress::-webkit-progress-value {
 
 .lang:hover .lang-flag {
     filter: grayscale(0%);
-}
-
-.lang:not(:last-of-type) {
-    margin-right: 20px;
 }
 
 .lang-flag {
